# supernote-osc

./: LICENSE  README.md  pyproject.toml
src/supernote_osc/: __main__.py  ardour.py  osc.py  osc_query.py  router.py
