[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "supernote-osc"
version = "0.0.1"
authors = [
    { name="Christopher Johnstone", email="meson800@gmail.com" },
]
description = "A FastAPI-forwarding server for OSC events, to a HTTP long-poll HTML page"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
     "osc4py3>=1.0",
     "fastapi>=0.115",
     "uvicorn>=0.32",
     "pydantic>=2.9"
]

[project.optional-dependencies]
dev = ["pre-commit", "ruff"]
